--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,9 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    background-image: url(https://cdn.wallpapersafari.com/18/87/cRsoqZ.jpg);
+    background-repeat: no-repeat;
+    z-index: 1;
 }
 
 a {
