--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,10 @@
 @import url("http://fonts.cdnfonts.com/css/pokemon-solid");
 
-.main {
+.main { 
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center; 
+  align-items: center;   
 }
 
 .poster {
@@ -84,6 +84,7 @@
 
   .main img {
     width: 350px;
+    margin-top: 250px;
   }
 
   .main input {
