--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,17 +1,23 @@
 @import url("http://fonts.cdnfonts.com/css/pokemon-solid");
 
+.container{
+  width: 1345px;
+  margin: 0 auto;
+}
+
 .main { 
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;   
 }
+.imglogs{
+  margin-top: 150px;
+  margin-right: 200px;
+}
 
 .poster {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  margin-left: 20px;
 }
 
 .voltar {
@@ -60,7 +66,42 @@
   color: black;
   background: white;
 }
+.title {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-left: 50%;
+  transform: translate(-50%);
+  }
 
+.pokeball {
+  height: 2rem;
+  margin-right: 0.25rem;
+  animation: bounce 0.3s linear infinite alternate;
+}
+
+@keyframes bounce {
+  0% {
+    transform: translateY(-10%);
+  }
+  100% {
+    transform: translateY(10%);
+  }
+}
+
+.pokemonlogo {
+  width: 15rem;
+  margin-top: -8.5rem;
+}
+
+.h1 {
+  color:  #ffcc01;
+  letter-spacing: 2px;
+  font-size: 1.5rem;
+  font-family: "Pokemon Solid", sans-serif;
+  text-transform: uppercase;
+  text-shadow: 0.1em 0.1em 0.1em rgb(49, 102, 177);
+}
 .page {
   display: flex;
   flex-wrap: wrap;
@@ -68,23 +109,16 @@
   width: 85%;
   margin: 0 auto;
 }
+
 .modal {
   display: flex;
   justify-content: space-around;
 }
 
 @media only screen and (max-width: 600px) {
-  .container {
-    height: 900px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .main img {
-    width: 350px;
-    margin-top: 250px;
+ 
+  .main{
+    margin-top: 300px;
   }
 
   .main input {
@@ -92,40 +126,46 @@
     height: 50px;
     margin: 50px;
   }
-
-  .entre {
-    width: 350px;
-    height: 80px;
-    border-radius: 20px;
-    font-size: larger;
-    font-family: "Pokemon Solid", sans-serif;
-    letter-spacing: 4px;
-    text-transform: uppercase;
-    color: white;
-    background: red;
-  }
-
-  .button {
-    width: 350px;
-    height: 80px;
-    border-radius: 20px;
-    font-size: larger;
-    font-family: "Pokemon Solid", sans-serif;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    color: black;
-    background: white;
-  }
-
+ 
   .poster {
-    display: flex;
-    flex-direction: column;
+    margin-left: 20px;
     margin-top: 50px;
-    justify-content: center;
-    align-items: center;
+    
   }
 
   .poster img {
     width: 350px;
+  }
+  .title {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    margin-left: 50%;
+    transform: translate(-50%);
+  }
+  .pokeball {
+    height: 2rem;
+    margin-right: 0.25rem;
+    animation: bounce 0.3s linear infinite alternate;
+  }
+  
+  @keyframes bounce {
+    0% {
+      transform: translateY(-10%);
+    }
+    100% {
+      transform: translateY(10%);
+    }
+  }
+  
+  .pokemonlogo {
+    width: 15rem;
+    margin-top: -8.5rem;
+  }
+  
+  .h1 {
+    color: #f1f1f1;
+    letter-spacing: 2px;
+    font-size: 1.5rem;
   }
 }
