--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,5 +1,5 @@
 body {
-  background: linear-gradient(to top, #2c2b2e, #16141b);   
+  background: #16141b;   
 }
 
 /* @import url("http://fonts.cdnfonts.com/css/pokemon-solid");
