--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,8 +1,9 @@
 @import url("http://fonts.cdnfonts.com/css/pokemon-solid");
 
 .container{
-  width: 1345px;
+  width: 1340px;
   margin: 0 auto;
+  position: relative;
 }
 
 .main { 
@@ -70,7 +71,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  margin-left: 50%;
+  margin-left: 47%;
   transform: translate(-50%);
   }
 
